Fix remaining SonarCloud issues: Stream.toList in tests and java.util.logging instead of printStackTrace (sections 15.2.2 and 15.2.3)